# datacite-automation

./: .gitignore  .gitmodules  2021-07 EAP website update.ipynb  README.md  flake.nix  pyproject.toml  requirements.txt
BulkUpdates/: 2021-07 EAP website update.ipynb
Statistics/: .gitignore  BL Consortium Org usage.ipynb
Util/: Make test DOI set.ipynb
