[tool.poetry]
name = "bl-doi-bulk-updates"
version = "0.1.0"
description = ""
authors = ["Jez Cope <jez.cope@bl.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyterlab = "^3.0.16"
numpy = "^1.21.0"
scipy = "^1.7.0"
pandas = "^1.3.0"
XlsxWriter = "^1.4.4"
httpx = "^0.18.2"
Faker = "^8.10.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
