[tool.poetry]
name = "bl-doi-bulk-updates"
version = "0.1.0"
description = ""
authors = ["Jez Cope <jez.cope@bl.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
jupyterlab = "*"
nbconvert = ">=6.3"
numpy = "*"
scipy = "*"
pandas = "*"
XlsxWriter = "*"
httpx = "*"
Faker = "*"
python-dotenv = "*"
dcrest = {git = "https://github.com/jezcope/dcrest.git", rev = "main"}
altair = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
